# NIMADS

./: .gitmodules  404.html  README.md  analysis.html  analysisBase.html  analysisRelationships.html  annotation.html  annotationBase.html  annotationRelationships.html  condition.html  conditionBase.html  definitions.json  generate_jsonld.py  image.html  imageBase.html  imageRelationships.html  index.html  mkdocs.yml  nimads.json  noteCollection.html  noteCollectionBase.html  noteCollectionRelationships.html  point.html  pointBase.html  pointRelationships.html  pointValue.html  requirements.txt  sitemap.xml  study.html  studyBase.html  studyRelationships.html  studyset.html  studysetBase.html  studysetRelationships.html
docs/: index.md
documentation/: _config.yml  _toc.yml  reference.rst
nimads/: Dataset.jsonld  Studyset.jsonld  _analysis.jsonld  _condition.jsonld  _coordinates.jsonld  _image.jsonld  _path.jsonld  _point.jsonld  _publication.jsonld  _space.jsonld  _study.jsonld  _type.jsonld  _value.jsonld  _valueType.jsonld  _weight.jsonld  analysis.jsonld  analysisBase.yaml  analysisRelationships.yaml  annotation.yaml  annotationBase.yaml  condition.jsonld  condition.yaml  conditionBase.yaml  coordinates.jsonld  image.jsonld  image.yaml  noteCollection.yaml  point.jsonld  point.yaml  pointBase.yaml  pointValue.yaml  study.jsonld  studyBase.yaml  studyset.yaml  studysetBase.yaml  value.jsonld
nimadschema/: setup.cfg
nimadschema/nimadschema/: __main__.py
nimadschema/nimadschema/models/: __init__.py  _nimads.py  nimads.py
search/: search_index.json
(+3 files in other folders)
