[metadata]
name = nimadschema
author = Neurostuff Contributors
author_email = neurostuff@gmail.com
version = 0.0.1
description = A Pydantic schema for NeuroImaging Meta Analysis Data Structure (NIMADS)
url = https://github.com/neurostuff/NIMADS
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.8
install_requires =
    pydantic
packages = find_namespace:
